include(zqrpc_functions)
find_package(ProtobufPlugin REQUIRED)

PROTOBUF_GENERATE_CPP(APOPHNIAPP_PB_SRCS APOPHNIAPP_PB_HDRS Utils.proto)
add_library(appb_utils STATIC ${APOPHNIAPP_PB_SRCS})

PROTOBUF_GENERATE_CPP(APOPHNIAPP_PB_SRCS APOPHNIAPP_PB_HDRS Http.proto)
PROTOBUF_GENERATE_ZQRPC(APOPHNIAPP_ZQRPC_SRCS APOPHNIAPP_ZQRPC_HDRS Http.proto)
add_library(appr_http STATIC ${APOPHNIAPP_PB_SRCS} ${APOPHNIAPP_ZQRPC_SRCS})

